--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Holy Group Of Schools</string>
+    <string name="app_name">Iqra Nehru Vihar DL-94</string>
     <string name="action_settings">Settings</string>
     <string name="Acra_msg">Crash</string>
     <string name="name_digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
