--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="confirm_message">Are you sure you want to"\n" confirm your order?</string>
     <string name="confirm_delete">Are you sure you want to delete this item?</string>
     <string name="Rs">\u20B9</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
